<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

   <Button 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/start_service"
       android:onClick="startService" />
   
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/stop_service"
       android:onClick="stopService" />
   
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/bind_service"
       android:onClick="bindService" />
   
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/unbind_service"
       android:onClick="unbindService" />
   
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/get_message"
       android:onClick="getMessage" />
   
    <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/send_intent"
       android:onClick="sendIntent" />

</LinearLayout>
